    - f|[*] = [*] if f accepts [*0]
    - f&&[+] = f if f rejects [*0]
    - b:b[*i..j] = b[*max(i,1)..j]
    - b[*i..j]:b[*k..l] = b[*max(i,1)+max(k,1)-1, j+l-1]

  - The HOA parser is a bit smarter when merging multiple initial
    states into a single initial state (Spot's automaton class
    supports only one): it now reuse the edges leaving initial states
    without incoming transitions.

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

New in spot 2.11.4  (2023-02-10)

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

  Bug fixes:

  - When merging initial states from state-based automata with
    multiple initial states (because Spot supports only one), the HOA
    parser could break state-based acceptance.  (Issue #522.)

  - autfilt --highlight-word refused to work on automata with Fin
    acceptance for historical reasons, however the code has been
    perfectly able to handle this for a while.  (Issue #523.)

  - delay_branching_here(), a new optimization of Spot 2.11 had an
    incorrect handling of states without successors, causing some
    segfaults.  (Issue #524.)

  - Running delay_branching_here() on state-based automata (this was not
    done in Spot so far) may require the output to use transition-based
    acceptance.  (Issue #525.)

  - to_finite(), introduce in 2.11, had a bug that could break the
    completeness of automata and trigger an exception from the HOA
    printer.  (Issue #526.)

New in spot 2.11.3  (2022-12-09)

  Bug fixes:

  - Automata-based implication checks, used to simplify formulas were
    slower than necessary because the translator was configured to
    favor determinism unnecessarily.  (Issue #521.)

  - Automata-based implication checks for f&g and f|g could be
    very slow when those n-ary operator had two many arguments.
    They have been limited to 16 operands, but this value can be changed
    with option -x tls-max-ops=N.  (Issue #521 too.)
